# napari

./: .cirrus.yml  .env_sample  .gitattributes  .gitignore  .gitpod.dockerfile  .gitpod.yml  .mon-config  .pre-commit-config.yaml  =  AGENTS.md  BENCHMARKS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EULA.md  HISTOGRAM_COMPARISON.md  HISTOGRAM_IMPLEMENTATION.md  LICENSE  MANIFEST.in  Makefile  PR_BODY.md  PULL_REQUEST_TEMPLATE.md  README.md  RELEASE.md  REPORT_HANDLING_MANUAL.md  Singularity  appveyor.yml  asv.conf.json  azure-pipelines.yml  build_env_yml.sh  bundle.py  bundle_conda.py  codecov.yml  conda_requirements.txt  conftest.py  demo.py  docker-compose.yml  dockerfile  dummy.py  generate_release_notes.py  (+30 more)
.asv/results/: benchmarks.json
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: BOT_REPO_UPDATE_FAIL_TEMPLATE.md  CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PRERELEASE_FAIL_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  TEST_FAIL_TEMPLATE.md  dependabot.yml  labeler.yml  missing_translations.md
.github/ISSUE_TEMPLATE/: --design-related.md  bug_report.md  bug_report.yml  config.yml  design_related.md  documentation.md  feature_request.md  release.md  support.md  task.md
.github/workflows/: action-lint.yml  actionlint.yml  api_changes.yml  artifacts.yml  auto_add_milestone.yml  auto_author_assign.yml  base_test_workflow.yml  benchmark_labels_trigger.yml  benchmarks.yml  benchmarks_report.yml  briefcase_patches.py  build_docs.yml  build_wheel.yml  check_extensions.yml  circleci.yml  citation_cff_validate.yml  codeql.yml  constraints_comment_trigger.yml  deploy_docs.yml  docker-publish.yml  docker-singularity-publish.yml  docs-build.yml  docs-deploy.yml  edit_pr_description.yml  label_and_milesone_checker.yml  label_and_milestone_checker.yml  label_checker.yml  labeler.yml  labeler.yml.disabled  make-bundle-conda.yml  make_bundle.yml  make_bundle_conda.yml  make_docs.yml  make_release.yml  make_release.yml.disabled  patch_briefcase.py  pr-benchmarks.yml  pr-lint.yml  pr-tests-full.yml  pr-tests-initial.yml  (+31 more)
.perfmon/: slicing.json
.perfmon/_tools/: compare_callable.py  (+2 more)
benchmarks/: benchmark_image_layer.py  benchmark_labels_layer.py  benchmark_points_layer.py  benchmark_qt_viewer.py  benchmark_qt_viewer_image.py  benchmark_qt_viewer_labels.py  benchmark_shapes_layer.py  benchmark_surface_layer.py  benchmark_vectors_layer.py  benchmark_viewer.py
binder/: apt.txt  environment.yml  postBuild  xfce4-panel.xml  xsettings.xml
bundle/: build.bat  build.sh  create_and_pack_executable.py  create_win_installer.iss  napari.py  napari.spec
demo/: demo_markers.ipynb  layers.ipynb  test_markers.ipynb
docs/: BENCHMARKS.md  CONTRIBUTING.md  CORE_DEV_GUIDE.md  GOVERNANCE.md  MISSION_AND_VALUES.md  Makefile  ORGANIZATION.md  RELEASE.md  VALUES.md  _config.yml  _toc.yml  api.rst  conf.py  copy-docs.py  gallery.md  glossary.md  index.md  quick_start.md  requirements.txt  update_docs.py  usage.md
examples/: 3D_image_plane_rendering.py  3D_paths.py  3D_vectors_through_time.py  3Dimage_plane_rendering.py  3d_kymograph.py  3d_kymograph_.py  3d_volume.py  4D_image_5D_image.py  4D_image_5D_points.py  5D_image.py  5D_image_5D_points.py  README.md  README.rst  _mandelbrot_vizarr.py  _test_progressive_loading.py  action_manager.py  add-graph-networkx.py  add-points-3d.py  add_3D_image.py  add_annotations.py  add_colormaps.py  add_graph.py  add_grayscale_image.py  add_image.py  add_image_complex.py  add_image_transformed.py  add_images.py  add_images_with_axis_labels.py  add_images_without_axis_labels.py  add_labels.py  add_labels_with_features.py  add_labels_with_properties.py  add_markers.py  add_mixed_dims.py  add_multiscale_image.py  add_multiscale_volume.py  add_points.py  add_points_3d.py  add_points_on_nD_shapes.py  add_points_with_annotations.py  (+270 more)
gui/: __init__.py  util.py
napari/: __init__.py  __init__.pyi  __main__.py  _check_numpy_version.py  _event_loop.py  _info.py  _lazy.py  _magicgui.py  _pydantic_compat.py  _version.py  _view.py  _viewer_key_bindings.py  add_layers.py  axis_functions.py  builtins.yaml  config.py  conftest.py  exceptions.py  keybindings.py  main.py  notifications.py  plugins.py  remote.py  settings.py  types.py  view_function.py  view_layers.py  view_layers.pyi  viewer.py  window.py
napari_builtins/: __init__.py  _filters.py  _measure_shapes.py  _ndims_balls.py  _skimage_data.py  _widgets.py  builtins.yaml
napari_gui/: __init__.py  _version.py
napari_info/: __init__.py  __main__.py
napari_io_lls/: __init__.py
requirements/: default.txt  develop.txt  development.txt  docs.txt  release.txt  test.txt  tests.txt
resources/: bundle_license.rtf  bundle_license.txt  bundle_readme.md  conda_menu_config.json  osx_pkg_welcome.rtf.tmpl  requirements_mypy.in  requirements_mypy.txt  what-is-biohub.pptx  ~$what-is-biohub.pptx
test/: test_napari_application.py
tests/: test_examples.py
tools/: README_TRIAGING.md  check_citation_authors.py  check_deps_version.py  check_extensions.py  check_groups_vs_extras.py  check_strings.py  check_updated_packages.py  check_vendored_modules.py  combine_constraints_files.py  compile_constraints.sh  compile_contraints.sh  create_pr_or_update_exisitng_one.py  create_pr_or_update_existing_one.py  demo_triager.py  enhanced_triager.py  generate_pixi_toml.py  get_auto_upgrade_branch_name.py  github_integration_demo.py  issue_triager.py  live_github_triaging.py  live_triager.py  mcp_integration_demo.py  mcp_workflow_guide.py  minreq.py  minreq_test.py  notify_ready_to_merge.py  real_issue_analysis.py  remove_html_comments_from_pr.py  setup_cfg_to_yaml.sh  setup_triaging.py  split_qt_backend.py  string_list.json  strings_list.py  test_strings.py  test_triaging.py  triage_workflow.py  update_PR_meta_information.py  update_docs.py  update_event_docs.py  update_spec0.py  (+1 more)
tutorials/: README.md  arbitrary_dimensional.md  getting_started.md  image.md  images.md  installation.md  labels.md  layers.md  multidimensional_dimensional.md  points.md  pyramid.md  shapes.md  vectors.md  viewer.md  welcome.md
(+3743 files in other folders)
